k8s/production/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-production
  namespace: doe25-group-15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-production
  template:
    metadata:
      labels:
        app: frontend-production
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: frontend
          image: registry.chas-lab.dev/chas-challenge-2026/grupp-15/zero-bug-heroes/zero-bug-heroes/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-production
  namespace: doe25-group-15
spec:
  selector:
    app: frontend-production
  ports:
    - port: 3000
      targetPort: 3000
