k8s/production/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-production
  namespace: doe25-simon-klausen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-production
  template:
    metadata:
      labels:
        app: postgres-production
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc-production
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-production
  namespace: doe25-simon-klausen
spec:
  selector:
    app: postgres-production
  ports:
    - port: 5432
      targetPort: 5432
