k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: doe25-group-15
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: doe25-group-15-security-headers-production@kubernetescrd,doe25-group-15-api-rate-limit-production@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: volly.cc.k3s.chas-lab.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-production
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-production
                port:
                  number: 3000
